# AegisOS

./: CHANGELOG.md  CMakeLists.txt  EXPLAIN.md  README.md  SECURITY.md
.github/workflows/: auto-docs.yml  ci.yml  clang-tests.yml  docs.yml  packages.yml  perf-budget.yml  project-automation.yml
docs/: BRANCH_PROTECTION.md  IMPLEMENTATION_PLAN.md  ONBOARDING.md  PERF_BUDGET.json  SANITIZERS.md  SNAPSHOT_SCHEMA_LEDGER.json  SNAPSHOT_SCHEMA_LEDGER.md  TRACE_JSON_PROPERTY.md
kernel/: README.md
kernel/include/: kernel.h
kernel/src/: kernel_main.c  process_checkpoint.c  secure_time_attestation.c
scripts/: README.md  atomic_update_txn.py  check_onboarding_ci_equivalence.py  configure_branch_protection.py  device_profile_boot_budget_enforcer.py  installer_bootstrap_state_machine.py  kernel_hotpath_benchmark.py  kernel_perf_budget_gate.py  low_resource_profile_advisor.py  migrate_policies_batch.py  onboarding_check.py  package_repo_delta_apply_simulator.py  package_signature_verifier.py  profile_trace_json_property.py  run_clang_suite.py  run_sanitizer_suite.py  sandbox_escape_fuzz_corpus.py  scheduler_turbo_benchmark.py  security_key_rotation_schedule_enforcer.py  service_restart_budget_supervisor.py  sync_project_items.py  update_project_docs.py  validate_packages.py  validate_snapshot_schema_ledger.py
tests/: atomic_update_txn_test.py  capability_test.c  device_profile_boot_budget_enforcer_test.py  installer_bootstrap_state_machine_test.py  kernel_sim_test.c  low_resource_profile_tuning_advisor_test.py  migrate_policies_batch_test.py  package_repo_delta_apply_simulator_test.py  package_signature_verifier_test.py  sandbox_engine_test.c  sandbox_escape_fuzz_corpus.json  sandbox_escape_fuzz_corpus_test.py  sandbox_escape_regression_test.c  sandbox_escape_seed_corpus.txt  sandbox_policy_test.c  scheduler_turbo_benchmark_test.py  security_key_rotation_schedule_enforcer_test.py  service_restart_budget_supervisor_test.py  trace_json_seed_corpus.txt
tests/sanitizers/: asan.supp  ubsan.supp
tools/benchmarks/: kernel_hotpath_bench.c
userland/: README.md
userland/include/: capability.h  sandbox_engine.h  sandbox_policy.h
userland/security/: capability.c  sandbox_engine.c  sandbox_policy.c
